--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,22 @@ body {
     overflow-x: hidden;
 }
 
-.wrapper { 
+ul,li { 
+    list-style: none;
+    padding-left: 0px;
+   
+}
+li { 
+    margin-bottom: 8px;
+}
+
+.wrapper {
     position: relative;
     width: 100%;
     overflow-x: hidden;
 }
 
-.dailitech__wordmark  { 
+.dailitech__wordmark {
     font-family: "RSU_Font";
     color: white;
     font-size: 35px;
@@ -35,66 +44,64 @@ body {
     background-position: top center;
 }
 
-.font-33 { 
+.font-33 {
     font-size: 33px;
 }
 
 .color__blue {
-    color: #00E2FF;
+    color: #00e2ff;
 }
 
-.color__green { 
-    color: #00F9A6;
+.color__green {
+    color: #00f9a6;
 }
 
-.color__pink { 
-    color: #FF50A3;
+.color__pink {
+    color: #ff50a3;
 }
 
-.color__yellow { 
-    color: #FFD900;
+.color__yellow {
+    color: #ffd900;
 }
 
-.color__dailitech { 
+.color__dailitech {
     color: #315c97;
 }
 
-.color__text ,p{ 
+.color__text,
+p, li , ul {
     color: #575757;
 }
 
-.color__purple { 
+.color__purple {
     color: #6a36d1;
 }
 
-.banner__top { 
+.banner__top {
     min-height: 500px;
     display: flex;
     align-items: center;
 }
 
-.btn__custom-white { 
-
+.btn__custom-white {
     background: transparent;
     border: 2.5px solid white;
     border-radius: 0;
     color: white;
     font-weight: bold;
-    padding: .95em;
+    padding: 0.95em;
     letter-spacing: 2px;
 }
 .btn__custom-white:hover {
-    background: rgba(0,0,0,.3);
+    background: rgba(0, 0, 0, 0.3);
     color: white;
-    text-shadow: 1px 1px 2px #00E2FF;
+    text-shadow: 1px 1px 2px #00e2ff;
 }
 
-.sponsor__container { 
-    background: rgba(0,0,0,.3);
-   
-
+.sponsor__container {
+    background: rgba(0, 0, 0, 0.3);
 }
-.sponsors { 
+.sponsors {
     display: flex;
     justify-content: space-between;
     max-width: 1200px;
@@ -103,16 +110,25 @@ body {
 }
 
 .sponsors .sponsor__item img {
-    max-width: 150px; 
-    opacity: .5;
+    max-width: 150px;
+    opacity: 0.5;
 }
 
-.content { 
+.content {
     margin-top: 5em;
     margin-bottom: 10em;
 }
 
-.motto { 
+
+@media only screen and (max-width: 768px) {
+    .banner__detail { 
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+}
+
+.motto {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
@@ -121,7 +137,7 @@ body {
     font-weight: 300;
 }
 
-.hex__topleft { 
+.hex__topleft {
     position: absolute;
     left: -200px;
     width: 350px;
@@ -133,7 +149,7 @@ body {
     width: 350px;
 }
 
-.text__verticle { 
+.text__verticle {
     -webkit-text-orientation: upright;
     -moz-text-orientation: upright;
     -ms-text-orientation: upright;
@@ -143,131 +159,186 @@ body {
     writing-mode: vertical-lr;
 }
 
-.text__subtitle { 
+.text__subtitle {
     margin-bottom: 20px;
     font-size: 18px;
     line-height: 1.89em;
 }
 
-.text__link { 
+.text__link {
     color: #ffb128;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 }
 
 .text__link:hover,
-.navbar-nav .nav-item:hover  { 
-    text-shadow: 0px 0px 3px #FFD900;
+.navbar-nav .nav-item:hover {
+    text-shadow: 0px 0px 3px #ffd900;
     color: #ffb128;
     text-decoration: none;
     cursor: pointer;
 }
 
-.line { 
+.line {
     height: 9.375vw;
     max-height: 80px;
-    border: 1px solid #FF50A3;
+    border: 1px solid #ff50a3;
     width: 0;
 }
 
 .our__services,
 .our__awards,
 .contact,
-.career { 
+.career {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 .our__awards,
 .contact,
-.career { 
+.career {
     margin-top: 150px;
 }
 
-.services__card .card{ 
+.services__card .card {
     min-height: 480px;
     border: none;
     box-shadow: 0px 3px 6px rgba(165, 165, 165, 0.3);
 }
 
-.circle__left { 
+.circle__left {
     position: absolute;
     left: -290px;
     z-index: -1;
 }
 
-.circle__right { 
+.circle__right {
     position: absolute;
     right: -290px;
     z-index: -1;
 }
 
-.triangle__left { 
+.triangle__left {
     position: absolute;
     left: -190px;
     z-index: -1;
 }
 
-.rotate__90 { 
+.rotate__90 {
     transform: rotate(90deg);
 }
 
-
-.benefit__container .card{ 
+.benefit__container .card {
     border: none;
     box-shadow: 0px 3px 6px rgba(165, 165, 165, 0.3);
     margin-top: 20px;
-    
 }
-.benefit__container .card .card-body { 
+.benefit__container .card .card-body {
     word-wrap: break-word;
 }
 
-.benefit__title { 
+.benefit__title {
     display: flex;
     align-items: center;
 }
-.benefit__title i{  
+.benefit__title i {
     font-size: 40px;
 }
-.benefit__title h6{ 
+.benefit__title h6 {
     margin: 0;
     padding-left: 15px;
     font-size: 20px;
     font-weight: bold;
 }
 
-
 @media only screen and (min-width: 768px) {
-    .mansory { 
+    .mansory {
         margin-top: -45px;
     }
-}  
+}
 
 @media only screen and (min-width: 992px) {
-    .mansory { 
+    .mansory {
         margin-top: -65px;
     }
-} 
+}
 
 @media only screen and (min-width: 1200px) {
-    .mansory { 
+    .mansory {
         margin-top: -45px;
     }
 }
 
-
 /* Navbar */
-.navbar-nav .nav-item { 
+.navbar-nav .nav-item {
     margin-left: 6px;
     margin-right: 6px;
-    transition: all .2s ease;
-  
+    transition: all 0.2s ease;
 }
 
-.map__wrapper { 
+.map__wrapper {
     height: 100%;
     min-height: 400px;
     border: 10px solid white;
     border-radius: 10px;
     box-shadow: 1px 1px 30px rgba(38, 70, 239, 0.15);
+}
+
+@media only screen and (min-width: 992px) {
+    .typing__animate {
+        overflow: hidden;
+        white-space: nowrap;
+        animation: typing 2.5s steps(30, end);
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .typing__animate {
+        overflow: hidden;
+        white-space: nowrap;
+        animation: typing 2.5s steps(30, end);
+    }
+}
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+.slowfloat__animate {
+    animation: slowfloat 3s infinite;
+}
+@keyframes slowfloat {
+    0%,
+    100% {
+        transfrom: translateX(0);
+    }
+    50% {
+        transform: translateX(-10px);
+    }
+}
+
+/* Slide */
+.mySlides1 {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    width: auto;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+
+.achievement__title { 
+    font-size: 28px;
+    display: block;
 }
