--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,7 @@ p, li , ul {
     border: 10px solid white;
     border-radius: 10px;
     box-shadow: 1px 1px 30px rgba(38, 70, 239, 0.15);
+    overflow: hidden;
 }
 
 @media only screen and (min-width: 992px) {
@@ -365,3 +366,54 @@ p, li , ul {
     }
 }
 
+
+
+.case__container button {
+    width: 100%;
+    height: 60px;
+    border-width: 2px;
+    border-radius: 0;
+    margin-top: 1em;
+    transition: all 0.6s ease;
+}
+
+.case__container .building { 
+    color: #00baff;
+    background: transparent;
+    border-color: #00baff;
+}
+
+.case__container .building:hover { 
+    text-shadow: 1px 1px 2px #00baff;
+}
+
+.case__container .tranformation { 
+    color: #ffd900;
+    background: transparent;
+    border-color: #ffd900;
+}
+
+.case__container .tranformation:hover { 
+    text-shadow: 1px 1px 2px #ffd900;
+}
+
+.case__container .optimization { 
+    color: #ff50a3;
+    background: transparent;
+    border-color: #ff50a3;
+}
+
+.case__container .optimization:hover { 
+    text-shadow: 1px 1px 2px #ff50a3;
+}
+
+
+.case__container .innovation { 
+    color: #00f9a6;
+    background: transparent;
+    border-color: #00f9a6;
+}
+
+.case__container .innovation:hover { 
+    text-shadow: 1px 1px 2px #00f9a6;
+}
