--- a/css/main.css
+++ b/css/main.css
@@ -373,8 +373,14 @@ p, li , ul {
     height: 60px;
     border-width: 2px;
     border-radius: 0;
-    margin-top: 1em;
+    margin-top: 5em;
     transition: all 0.6s ease;
+    color: #fff;
+    background: #6a36d1;
+}
+
+.case__container button:hover {
+    color: #fff;
 }
 
 .case__container .building { 
