ADD Workload to AWS

--- a/css/main.css
+++ b/css/main.css
@@ -429,3 +429,21 @@ p, li , ul {
 .case__container .innovation:hover { 
     text-shadow: 1px 1px 2px #00f9a6;
 }
+
+.workload-list { 
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+
+}
+.workload-list li { 
+    margin-bottom: 20px;    
+}
+.workload-list div { 
+    display: flex;
+    align-items: center;
+}
+
+.workload-list img{
+    width: 50px;
+    margin-right:1em ;
+}
