--- a/css/main.css
+++ b/css/main.css
@@ -447,3 +447,29 @@ p, li , ul {
     width: 50px;
     margin-right:1em ;
 }
+
+.btn.btn-link  {
+    font-weight: bold;
+    padding : 0;
+    transition: all 0.2s ease;
+}
+.btn.btn-link:hover {
+    text-shadow: 0px 0px 3px #ffd900;
+    color: #ffb128;
+    
+}
+.row-center { 
+    display: flex;
+    justify-content: center;
+}
+.card { 
+    padding: 20px;
+}
+
+.card h5 {
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+.card .btn-link { 
+    text-align: left;
+}
